tests/errors/index.xen
# Test index out of bounds
spawn numbers: list<int> = [1, 2, 3]
spawn value: int = numbers[10]
